scroll glitch bug to test on iphone

--- a/src/app/layout/navigation/index.css
+++ b/src/app/layout/navigation/index.css
@@ -84,7 +84,7 @@
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 
   @media (--desktop) {
     display: none;
@@ -92,7 +92,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  display: none;
+  /* display: none; */
 
   @media (--desktop) {
     display: none;
