--- a/src/app/pages/homepage/index.css
+++ b/src/app/pages/homepage/index.css
@@ -6,9 +6,6 @@ body {
   @media screen and (max-width: 1023px) {
     height: auto;
   } */
-  &.--mobile {
-    overflow: hidden;
-  }
 }
 
 .year-container {
